# aedo

./: .env.example  .gitignore  Banco-del-Master-debug.bat  Banco-del-Master.bat  LICENSE  README.md  pyproject.toml
aedo/: __init__.py  config.py  play.py
aedo/admin/: __init__.py  __main__.py  app.py  blueprint_ops.py  desktop.py  routes_command.py  routes_regia.py  routes_rules.py  routes_state.py  routes_tools.py  schemas.py  services.py  state_ops.py  supervisor.py
aedo/admin/static/: app.js  index.html  style.css
aedo/api/: __init__.py  __main__.py  app.py  routes.py  schemas.py
aedo/bots/discord/: __init__.py  __main__.py  bot.py  embeds.py  messages.py  service.py
aedo/core/memory/: __init__.py  embedder.py  store.py
aedo/core/models/: __init__.py  base.py  blueprint.py  campaign.py  character.py  enums.py  event.py  item.py  master.py  memory.py  objective.py  relationship.py
aedo/core/narrator/: __init__.py  base.py  fake.py  openrouter.py  parsing.py  prompts.py
aedo/core/resolution/: __init__.py  dice.py  engine.py
aedo/storage/: __init__.py  database.py
aedo/templates/: __init__.py  builtin.py
aedo/web/: index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_admin_command.py  test_admin_regia.py  test_admin_rules.py  test_admin_state.py  test_admin_supervisor.py  test_admin_tools.py  test_api.py  test_delete_campaign.py  test_discord_service.py  test_game_loop.py  test_memory.py  test_messages.py  test_models.py  test_narrator.py  test_regia.py  test_resolution.py  test_templates.py  test_tools.py
(+8 files in other folders)
